--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
    <h2 class="Home__subtitle">Junior Software Engineer</h2>
 </div>
 
+<h2>Skills</h2>
 <div class="Skills">
-  <h2>Skills</h2>
    <img src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML5"/>
    <img src="https://cdn-icons-png.flaticon.com/128/5968/5968242.png" alt="CSS"/>
    <img src="https://cdn-icons-png.flaticon.com/128/919/919831.png" alt="SASS"/>
@@ -39,8 +39,8 @@
 </div>
 <br>
 <br>
+<h2>Projects</h2>
 <div class="Projects">
-  <h2>Projects</h2>
  
  <div>
   <h3>Javascript Calculator</h3>
@@ -64,8 +64,9 @@
 </div>
 </div>
 
+<h2>About</h2>
+<br>
 <div class="About">
-  <h2 class="About__Title">About</h2>
   <div>
     <p class="About__para">Hi, I'm Amy! I am an International Flight Attendant turned Junior Software Engineer based in Sydney. I began teaching myself coding on layovers and quickly developed a passion for creating websites and Javascript applications. 
   
@@ -77,8 +78,8 @@
 </div>
 </div>
 
+<h2>Contact</h2>
 <div>
-  <h2>Contact</h2>
 
   <a href="mailto:amy.barclay24@gmail.com">Email</a>
 
