--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
        
       </ul>
     </nav>
-    
+
 <div class="Home">
   <h1 class="Home__title">Amy Barclay</h1>
-   <h2 class="Home__subtitle">Junior Software Engineer</h2>
+  <h2 class="Home__subtitle">Junior Software Engineer</h2>
 </div>
 
 <h2>Skills</h2>
 <div class="Skills">
-   <img src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML5"/>
-   <img src="https://cdn-icons-png.flaticon.com/128/5968/5968242.png" alt="CSS"/>
-   <img src="https://cdn-icons-png.flaticon.com/128/919/919831.png" alt="SASS"/>
-   <img src="https://cdn-icons-png.flaticon.com/128/5968/5968292.png" alt="Javascript"/>
-   <img src="https://cdn-icons-png.flaticon.com/128/4494/4494740.png" alt="Git"/>
+   <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML5"/>
+   <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/5968/5968242.png" alt="CSS"/>
+   <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/919/919831.png" alt="SASS"/>
+   <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/5968/5968292.png" alt="Javascript"/>
+   <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/4494/4494740.png" alt="Git"/>
   
 </div>
 <br>
@@ -42,25 +42,36 @@
 <h2>Projects</h2>
 <div class="Projects">
  
- <div>
-  <h3>Javascript Calculator</h3>
+ <div class="Projects__Set">
+  <h3 class="Projects__title">Javascript Calculator</h3>
+  <br>
   <img src="https://th.bing.com/th/id/OIP.E-MciTgKjviDKAzVEhVNogHaI7?w=154&h=186&c=7&r=0&o=5&pid=1.7" alt="Calculator"/>
-  <p></p>
+  <br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
  </div>
 
- <div>
- <h3>eShop Website</h3>
+ <div class="Projects__Set">
+ <h3 class="Projects__title">eShop Website</h3>
+ <br>
   <img src="https://th.bing.com/th/id/OIP.okNezoTj488ZWKIVlgM6UgHaG1?w=217&h=200&c=7&r=0&o=5&pid=1.7" alt="Shopping Cart"/>
+  <br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
  </div>
 
- <div>
-  <h3>Google Books</h3>
+ <div class="Projects__Set">
+  <h3 class="Projects__title">Google Books</h3>
+  <br>
   <img src="https://th.bing.com/th/id/OIP.4eoJGyAJ-Y8pnZjgbgWyPAHaF7?w=243&h=194&c=7&r=0&o=5&pid=1.7" alt="Book"/>
+  <br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 </div>
 
-<div>
-  <h3>Morse Code Translator</h3>
+<div class="Projects__Set">
+  <h3 class="Projects__title">Morse Code Translator</h3>
+  <br>
   <img src="https://th.bing.com/th/id/OIP.rD7EewrOOh0bPacQPfcMkgHaG6?w=190&h=180&c=7&r=0&o=5&pid=1.7" alt="Morse Translator"/>
+  <br>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
 </div>
 </div>
 
