--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 </div>
 
 <h2>Contact</h2>
-<div>
 
-  <a href="mailto:amy.barclay24@gmail.com">Email</a>
+<div class="Contact">
+  <a class="Contact__link" href="mailto:amy.barclay24@gmail.com">Email</a>
 
-  <a href="https://www.linkedin.com/in/amy-barclay-5563b51b1/">Linkedin</a>
+  <a class="Contact__link" href="https://www.linkedin.com/in/amy-barclay-5563b51b1/">Linkedin</a>
 
-  <a href="https://github.com/miss-amy/">Github</a>
+  <a class="Contact__link" href="https://github.com/miss-amy/">Github</a>
 </div>
 
 <footer>
