--- a/index.html
+++ b/index.html
@@ -45,33 +45,33 @@
  <div class="Projects__Set">
   <h3 class="Projects__title">Javascript Calculator</h3>
   <br>
-  <img src="https://th.bing.com/th/id/OIP.E-MciTgKjviDKAzVEhVNogHaI7?w=154&h=186&c=7&r=0&o=5&pid=1.7" alt="Calculator"/>
+  <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Calculator"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
  </div>
 
  <div class="Projects__Set">
  <h3 class="Projects__title">eShop Website</h3>
  <br>
-  <img src="https://th.bing.com/th/id/OIP.okNezoTj488ZWKIVlgM6UgHaG1?w=217&h=200&c=7&r=0&o=5&pid=1.7" alt="Shopping Cart"/>
+  <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Shopping Cart"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
  </div>
 
  <div class="Projects__Set">
   <h3 class="Projects__title">Google Books</h3>
   <br>
-  <img src="https://th.bing.com/th/id/OIP.4eoJGyAJ-Y8pnZjgbgWyPAHaF7?w=243&h=194&c=7&r=0&o=5&pid=1.7" alt="Book"/>
+  <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Book"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </div>
 
 <div class="Projects__Set">
   <h3 class="Projects__title">Morse Code Translator</h3>
   <br>
-  <img src="https://th.bing.com/th/id/OIP.rD7EewrOOh0bPacQPfcMkgHaG6?w=190&h=180&c=7&r=0&o=5&pid=1.7" alt="Morse Translator"/>
+  <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Morse Translator"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </div>
 </section>
 
