Added media queries

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div>
     <p class="About__para">Hi, I'm Amy! I am an International Flight Attendant turned Junior Software Engineer based in Sydney. I began teaching myself HTML and CSS on layovers and quickly developed a passion for coding. 
   
-    In my spare time I like to learn languages, I enjoy cooking food from my travels and I like to explore the outdoors!
+    In my spare time I like learning languages, cooking and exploring the outdoors!
     </p>
   </div>
   <br>
