--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <br>
   <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Calculator"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
  </div>
 
  <div class="Projects__Set">
@@ -59,7 +59,7 @@
  <br>
   <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Shopping Cart"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
  </div>
 
  <div class="Projects__Set">
@@ -67,7 +67,7 @@
   <br>
   <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Book"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </div>
 
 <div class="Projects__Set">
@@ -75,8 +75,10 @@
   <br>
   <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Morse Translator"/>
   <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  </a>
 </div>
+
 </section>
 
 <h2 id="about">About</h2>
