--- a/index.html
+++ b/index.html
@@ -31,85 +31,78 @@
 <h2 id="skills">Skills</h2>
 <div class="Skills">
    <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML5"/>
-   <br>
+     <br>
    <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/5968/5968242.png" alt="CSS"/>
-   <br>
+      <br>
    <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/919/919831.png" alt="SASS"/>
-   <br>
+     <br>
    <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/5968/5968292.png" alt="Javascript"/>
-   <br>
+     <br>
    <img class="Skills__img" src="https://cdn-icons-png.flaticon.com/128/4494/4494740.png" alt="Git"/>
   
 </div>
+
 <br>
 <br>
+
 <h2 id="projects">Projects</h2>
 <section class="Projects">
  
  <div class="Projects__Set">
-  <h3 class="Projects__title">Javascript Calculator</h3>
-  <br>
-  <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Calculator"/>
-  <br>
-  <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <h3 class="Projects__title">Javascript Calculator</h3>
+      <br>
+    <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Calculator"/>
+      <br>
+    <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
  </div>
 
  <div class="Projects__Set">
- <h3 class="Projects__title">eShop Website</h3>
- <br>
+  <h3 class="Projects__title">eShop Website</h3>
+    <br>
   <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Shopping Cart"/>
-  <br>
+    <br>
   <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
  </div>
 
  <div class="Projects__Set">
   <h3 class="Projects__title">Google Books</h3>
-  <br>
+    <br>
   <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Book"/>
-  <br>
+    <br>
   <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </div>
 
 <div class="Projects__Set">
   <h3 class="Projects__title">Morse Code Translator</h3>
-  <br>
+   <br>
   <img src="https://cdn-icons-png.flaticon.com/128/1813/1813912.png" alt="Morse Translator"/>
-  <br>
+    <br>
   <p class="Projects__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-  </a>
 </div>
-
 </section>
 
 <h2 id="about">About</h2>
-<br>
+  <br>
 <div class="About">
   <div>
-    <p class="About__para">Hi, I'm Amy! I am an International Flight Attendant turned Junior Software Engineer based in Sydney. I began teaching myself HTML and CSS on layovers and quickly developed a passion for coding. 
-  
-    In my spare time I like learning languages, cooking and exploring the outdoors!
+    <p class="About__para">Hi, I'm Amy! I am an International Flight Attendant turned Junior Software Engineer based in Sydney. I began teaching myself HTML and CSS on layovers and quickly developed a passion for coding. In my spare time I like learning languages, cooking and exploring the outdoors!
     </p>
   </div>
-  <br>
- <div>
- <img class="About__img" src="https://ca.slack-edge.com/TCRAX8NTH-U040YC8Q0AU-e82feba2f82d-512" alt="Photo skiing"/>
-</div>
-</div>
-
-<h2 id="contact">Contact</h2>
-<div class="Contact">
-  <a class="Contact__link" href="mailto:amy.barclay24@gmail.com">Email</a>
-
-  <a class="Contact__link" href="https://www.linkedin.com/in/amy-barclay-5563b51b1/">Linkedin</a>
-
-  <a class="Contact__link" href="https://github.com/miss-amy/">Github</a>
+     <br>
+  <div>
+  <img class="About__img" src="https://ca.slack-edge.com/TCRAX8NTH-U040YC8Q0AU-e82feba2f82d-512" alt="Photo skiing"/>
+  </div>
 </div>
 
 <footer>
-  
+  <h2 id="contact">Contact</h2>
+<div class="Contact">
+  <a class="Contact__link" href="mailto:amy.barclay24@gmail.com">Email</a>
+  <a class="Contact__link" href="https://www.linkedin.com/in/amy-barclay-5563b51b1/">Linkedin</a>
+  <a class="Contact__link" href="https://github.com/miss-amy/">Github</a>
+</div>
 </footer>
 
 </body>
-<html>
 </html>
 
